--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "",
-    "description": "",
-    "require": {}
-  }
+  "name": "braco96/pdepiel",
+  "description": "Proyecto de despliegue de piel",
+  "require": {}
+}
